--- a/stocks/app/build.gradle
+++ b/stocks/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
     implementation 'org.springframework.data:spring-data-redis:2.5.5'
     implementation 'io.lettuce:lettuce-core:6.1.5.RELEASE'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.13.0'
     
 }
 
